--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,29 @@ services:
     volumes:
       - ./sqlscripts/postgresql-create.sql:/docker-entrypoint-initdb.d/postgresql-create.sql
       - ./testfiles/xadmin.sql:/docker-entrypoint-initdb.d/xadmin.sql
-     
-  pgadmin:      
-    image: dpage/pgadmin4
-    environment:  
-      PGADMIN_DEFAULT_EMAIL: 'user@domain.com'
-      PGADMIN_DEFAULT_PASSWORD: 'p4ssw0rd'
-    restart: unless-stopped      
-    ports:
-      - "5050:80"  
-    depends_on:
-      - db 
       
+  adminer:
+    image: adminer
+    environment:
+      ADMINER_DEFAULT_DB_DRIVER: postgresql
+      ADMINER_DEFAULT_DB_HOST: db
+      ADMINER_DEFAULT_DB_NAME: edm
+      ADMINER_DESIGN: nette
+    restart: unless-stopped
+    ports:
+      - 8080:8080  
+    depends_on:
+      - db         
+     
+#  pgadmin:      
+#    image: dpage/pgadmin4
+#    environment:  
+#      PGADMIN_DEFAULT_EMAIL: 'user@domain.com'
+#      PGADMIN_DEFAULT_PASSWORD: 'p4ssw0rd'
+#    restart: unless-stopped      
+#    ports:
+#      - "5050:80"  
+#    depends_on:
+#      - db 
+ 
+ 
