--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,10 @@ services:
       
   adminer:
     image: adminer
-    restart: unless-stopped
+    environment:    
+      ADMINER_DESIGN: nette   #nqp, rmsoft
+      ADMINER_DEFAULT_SERVER: db  
+    restart: unless-stopped      
     ports:
       - "8080:8080"  
     depends_on:
